Prepare v8.0.0-alpha.1 open alpha release