@@ -1,9 +1,14 @@
 package org.intermed.launcher;
 
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.nio.file.attribute.PosixFilePermission;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
@@ -12,6 +17,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.intermed.core.bridge.ForgeNetworkBridge;
@@ -36,6 +42,10 @@ import org.intermed.core.security.SecurityPolicy;
 public class InterMedLauncher {
     private static final DateTimeFormatter DIAGNOSTICS_TIMESTAMP =
         DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss").withZone(ZoneOffset.UTC);
+    private static final List<String> REQUIRED_JVM_OPENS = List.of(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    );
 
     public static void main(String[] args) throws Exception {
         int exitCode = execute(args);
@@ -53,6 +63,7 @@ public class InterMedLauncher {
             case "compat-report" -> executeCompatReport(request);
             case "compat-corpus" -> executeCompatCorpus(request);
             case "compat-sweep-matrix" -> executeCompatSweepMatrix(request);
+            case "launch-kit" -> executeLaunchKit(request);
             case "alpha-release-reports" -> executeAlphaReleaseReports(request);
             case "sbom" -> executeSbom(request);
             case "api-gap-matrix" -> executeApiGapMatrix(request);
@@ -105,13 +116,13 @@ public class InterMedLauncher {
         RuntimeConfig.reload();
 
         LaunchPaths paths = resolveLaunchPaths(request);
+        Path agentPath = Path.of(request.option("agent").orElse(resolveDefaultAgentPath().toString()))
+            .toAbsolutePath()
+            .normalize();
         List<String> command = new ArrayList<>();
         command.add(request.option("java").orElse(defaultJavaCommand()));
-        command.add("-javaagent:" + request.option("agent").orElse(resolveDefaultAgentPath().toString()));
-        command.add("-Druntime.game.dir=" + paths.gameDir());
-        command.add("-Druntime.mods.dir=" + paths.modsDir());
-        command.add("-Dintermed.modsDir=" + paths.modsDir());
-        request.option("mappings").ifPresent(path -> command.add("-Dintermed.mappings.tiny=" + path));
+        command.addAll(buildJvmAgentArgs(agentPath, paths, request.option("mappings")
+            .map(path -> Path.of(path).toAbsolutePath().normalize())));
 
         Optional<String> jar = request.option("jar");
         if (jar.isPresent()) {
@@ -181,6 +192,61 @@ public class InterMedLauncher {
             }
         });
         return doctorExit != 0 || failures > 0 ? 1 : 0;
+    }
+
+    private static int executeLaunchKit(LaunchRequest request) throws Exception {
+        RuntimeConfig.reload();
+        LaunchPaths paths = resolveLaunchPaths(request);
+        Path outputDir = request.option("output-dir")
+            .map(path -> Path.of(path).toAbsolutePath().normalize())
+            .orElse(paths.gameDir().resolve(".intermed/launch-kit").toAbsolutePath().normalize());
+        Path runtimeDir = outputDir.resolve("runtime");
+        Files.createDirectories(runtimeDir);
+
+        Path genericSource = request.option("agent")
+            .map(path -> Path.of(path).toAbsolutePath().normalize())
+            .orElseGet(() -> {
+                try {
+                    return resolveDefaultGenericAgentPath();
+                } catch (Exception e) {
+                    throw new IllegalStateException("Failed to resolve default generic InterMed agent jar", e);
+                }
+            });
+        if (!Files.isRegularFile(genericSource)) {
+            throw new IllegalArgumentException("Generic InterMed agent jar not found: " + genericSource);
+        }
+
+        Optional<Path> fabricSource = request.option("fabric-agent")
+            .map(path -> Path.of(path).toAbsolutePath().normalize())
+            .or(() -> {
+                try {
+                    return resolveDefaultFabricAgentPath();
+                } catch (Exception e) {
+                    throw new IllegalStateException("Failed to resolve default Fabric InterMed agent jar", e);
+                }
+            });
+
+        Path stagedMappings = resolveMappingsPath(request)
+            .map(path -> stageArtifact(path, runtimeDir.resolve("mappings.tiny")))
+            .orElse(null);
+
+        List<LaunchKitVariant> variants = new ArrayList<>();
+        variants.add(writeLaunchKitVariant("generic", genericSource, outputDir, runtimeDir, paths, stagedMappings));
+        fabricSource
+            .filter(Files::isRegularFile)
+            .filter(path -> !path.equals(genericSource))
+            .ifPresent(path -> variants.add(writeLaunchKitVariant("fabric", path, outputDir, runtimeDir, paths, stagedMappings)));
+
+        writeLaunchKitReadme(outputDir, paths, variants, stagedMappings != null);
+        writeLaunchKitManifest(outputDir, paths, variants, stagedMappings);
+
+        System.out.println("[LaunchKit] Wrote launch kit to " + outputDir);
+        variants.forEach(variant -> {
+            System.out.println("[LaunchKit] " + variant.profile() + " JVM args: " + variant.launcherSnippet());
+            System.out.println("[LaunchKit] " + variant.profile() + " shell wrapper: " + variant.shellScript());
+            System.out.println("[LaunchKit] " + variant.profile() + " Windows wrapper: " + variant.cmdScript());
+        });
+        return 0;
     }
 
     private static int executeCompatReport(LaunchRequest request) throws Exception {
@@ -526,6 +592,21 @@ public class InterMedLauncher {
         return ModDiscovery.discoverCandidateArchives(resolveLaunchPaths(request).modsDir().toFile());
     }
 
+    private static List<String> buildJvmAgentArgs(Path agentPath,
+                                                  LaunchPaths paths,
+                                                  Optional<Path> mappingsPath) {
+        List<String> args = new ArrayList<>();
+        args.add("-javaagent:" + agentPath.toAbsolutePath().normalize());
+        args.addAll(REQUIRED_JVM_OPENS);
+        args.add("-Druntime.game.dir=" + paths.gameDir());
+        args.add("-Druntime.mods.dir=" + paths.modsDir());
+        args.add("-Dintermed.modsDir=" + paths.modsDir());
+        mappingsPath
+            .map(path -> path.toAbsolutePath().normalize())
+            .ifPresent(path -> args.add("-Dintermed.mappings.tiny=" + path));
+        return args;
+    }
+
     private static Optional<Path> resolveMappingsPath(LaunchRequest request) throws Exception {
         if (request.option("mappings").isPresent()) {
             Path explicit = Path.of(request.option("mappings").get()).toAbsolutePath().normalize();
@@ -588,6 +669,80 @@ public class InterMedLauncher {
         return self;
     }
 
+    private static Path resolveDefaultGenericAgentPath() throws Exception {
+        Path self = resolveSelfPath();
+        if (Files.isRegularFile(self)) {
+            String fileName = self.getFileName() == null ? "" : self.getFileName().toString();
+            if (!fileName.endsWith("-fabric.jar")
+                && !fileName.endsWith("-bootstrap.jar")
+                && fileName.endsWith(".jar")) {
+                return self;
+            }
+            if (fileName.endsWith("-fabric.jar")) {
+                String genericName = fileName.substring(0, fileName.length() - "-fabric.jar".length()) + ".jar";
+                Path sibling = self.resolveSibling(genericName).toAbsolutePath().normalize();
+                if (Files.isRegularFile(sibling)) {
+                    return sibling;
+                }
+            }
+        }
+        Path buildDir = Path.of("app/build/libs").toAbsolutePath().normalize();
+        if (Files.isDirectory(buildDir)) {
+            try (var candidates = Files.list(buildDir)) {
+                Optional<Path> builtJar = candidates
+                    .filter(Files::isRegularFile)
+                    .filter(path -> {
+                        String fileName = path.getFileName().toString();
+                        return fileName.startsWith("InterMedCore")
+                            && fileName.endsWith(".jar")
+                            && !fileName.endsWith("-bootstrap.jar")
+                            && !fileName.endsWith("-fabric.jar")
+                            && !fileName.endsWith("-thin.jar")
+                            && !fileName.endsWith("-sources.jar");
+                    })
+                    .sorted()
+                    .reduce((left, right) -> right);
+                if (builtJar.isPresent()) {
+                    return builtJar.get().toAbsolutePath().normalize();
+                }
+            }
+        }
+        return resolveDefaultAgentPath();
+    }
+
+    private static Optional<Path> resolveDefaultFabricAgentPath() throws Exception {
+        Path self = resolveSelfPath();
+        if (Files.isRegularFile(self)) {
+            String fileName = self.getFileName() == null ? "" : self.getFileName().toString();
+            if (fileName.endsWith("-fabric.jar")) {
+                return Optional.of(self);
+            }
+            if (fileName.endsWith(".jar")) {
+                String fabricName = fileName.substring(0, fileName.length() - ".jar".length()) + "-fabric.jar";
+                Path sibling = self.resolveSibling(fabricName).toAbsolutePath().normalize();
+                if (Files.isRegularFile(sibling)) {
+                    return Optional.of(sibling);
+                }
+            }
+        }
+        Path buildDir = Path.of("app/build/libs").toAbsolutePath().normalize();
+        if (Files.isDirectory(buildDir)) {
+            try (var candidates = Files.list(buildDir)) {
+                return candidates
+                    .filter(Files::isRegularFile)
+                    .filter(path -> {
+                        String fileName = path.getFileName().toString();
+                        return fileName.startsWith("InterMedCore")
+                            && fileName.endsWith("-fabric.jar");
+                    })
+                    .sorted()
+                    .reduce((left, right) -> right)
+                    .map(path -> path.toAbsolutePath().normalize());
+            }
+        }
+        return Optional.empty();
+    }
+
     private static Path resolveSelfPath() throws Exception {
         return Path.of(InterMedLauncher.class.getProtectionDomain().getCodeSource().getLocation().toURI())
             .toAbsolutePath()
@@ -625,12 +780,226 @@ public class InterMedLauncher {
         System.out.println("  compat-report [--mods-dir PATH] [--game-dir PATH] [--output PATH]");
         System.out.println("  compat-corpus [--mods-dir PATH] [--game-dir PATH] [--output PATH]");
         System.out.println("  compat-sweep-matrix [--corpus PATH] [--results PATH] [--mods-dir PATH] [--game-dir PATH] [--output PATH]");
+        System.out.println("  launch-kit [--agent PATH] [--fabric-agent PATH] [--mods-dir PATH] [--game-dir PATH] [--mappings PATH] [--output-dir PATH]");
         System.out.println("  alpha-release-reports [--project-root PATH] [--mods-dir PATH] [--game-dir PATH] [--harness-results PATH] [--performance-snapshot PATH] [--output-dir PATH]");
         System.out.println("  sbom [--mods-dir PATH] [--game-dir PATH] [--output PATH]");
         System.out.println("  api-gap-matrix [--game-dir PATH] [--output PATH]");
         System.out.println("  launch-readiness-report [--project-root PATH] [--mods-dir PATH] [--game-dir PATH] [--harness-results PATH] [--output PATH]");
         System.out.println("  diagnostics-bundle [--mods-dir PATH] [--game-dir PATH] [--harness-results PATH] [--output PATH]");
         System.out.println("  launch (--jar PATH | --main-class CLASS [--classpath CP]) [--agent PATH] [--mods-dir PATH] [--game-dir PATH] [--mappings PATH] [--harness-results PATH] [--dry-run] [--diagnostics-output PATH] [--no-diagnostics-bundle] [-- <minecraft args...>]");
+    }
+
+    private static LaunchKitVariant writeLaunchKitVariant(String profile,
+                                                          Path sourceAgent,
+                                                          Path outputDir,
+                                                          Path runtimeDir,
+                                                          LaunchPaths paths,
+                                                          Path stagedMappings) {
+        Path stagedAgent = stageArtifact(sourceAgent, runtimeDir.resolve(sourceAgent.getFileName()));
+        Path stagedBootstrap = stageArtifact(
+            resolveBootstrapSupportPath(sourceAgent),
+            runtimeDir.resolve(resolveBootstrapSupportPath(sourceAgent).getFileName())
+        );
+
+        List<String> jvmArgs = buildJvmAgentArgs(stagedAgent, paths, Optional.ofNullable(stagedMappings));
+        Path argFile = outputDir.resolve("intermed-java-" + profile + ".args").toAbsolutePath().normalize();
+        Path launcherSnippet = outputDir.resolve("launcher-jvm-args-" + profile + ".txt").toAbsolutePath().normalize();
+        Path shellScript = outputDir.resolve("intermed-launch-" + profile + ".sh").toAbsolutePath().normalize();
+        Path cmdScript = outputDir.resolve("intermed-launch-" + profile + ".cmd").toAbsolutePath().normalize();
+
+        writeUtf8(argFile, renderArgFile(jvmArgs));
+        writeUtf8(launcherSnippet, renderLauncherSnippet(jvmArgs));
+        writeUtf8(shellScript, renderShellWrapper(argFile.getFileName().toString()));
+        writeUtf8(cmdScript, renderWindowsWrapper(argFile.getFileName().toString()));
+        makeExecutableIfSupported(shellScript);
+
+        return new LaunchKitVariant(
+            profile,
+            stagedAgent,
+            stagedBootstrap,
+            argFile,
+            launcherSnippet,
+            shellScript,
+            cmdScript,
+            jvmArgs
+        );
+    }
+
+    private static Path stageArtifact(Path source, Path target) {
+        Path normalizedSource = source.toAbsolutePath().normalize();
+        Path normalizedTarget = target.toAbsolutePath().normalize();
+        try {
+            Files.createDirectories(normalizedTarget.getParent());
+            if (normalizedSource.equals(normalizedTarget)) {
+                return normalizedTarget;
+            }
+            Files.copy(normalizedSource, normalizedTarget, StandardCopyOption.REPLACE_EXISTING);
+            return normalizedTarget;
+        } catch (Exception e) {
+            throw new IllegalStateException("Failed to stage launch-kit artifact " + normalizedSource
+                + " -> " + normalizedTarget, e);
+        }
+    }
+
+    private static String renderArgFile(List<String> tokens) {
+        return tokens.stream()
+            .map(InterMedLauncher::quoteForDisplay)
+            .collect(Collectors.joining(System.lineSeparator(), "", System.lineSeparator()));
+    }
+
+    private static String renderLauncherSnippet(List<String> tokens) {
+        return tokens.stream()
+            .map(InterMedLauncher::quoteForDisplay)
+            .collect(Collectors.joining(" ", "", System.lineSeparator()));
+    }
+
+    private static String renderShellWrapper(String argFileName) {
+        return """
+            #!/usr/bin/env sh
+            set -eu
+            SCRIPT_DIR="$(CDPATH= cd -- "$(dirname -- "$0")" && pwd)"
+            JAVA_BIN="${JAVA:-java}"
+            exec "$JAVA_BIN" @"$SCRIPT_DIR/%s" "$@"
+            """.formatted(argFileName);
+    }
+
+    private static String renderWindowsWrapper(String argFileName) {
+        return """
+            @echo off
+            setlocal
+            set "SCRIPT_DIR=%%~dp0"
+            set "JAVA_BIN=%%JAVA%%"
+            if not defined JAVA_BIN set "JAVA_BIN=java"
+            "%%JAVA_BIN%%" @"%%SCRIPT_DIR%%%s" %%*
+            """.formatted(argFileName).replace("\n", "\r\n");
+    }
+
+    private static void writeLaunchKitReadme(Path outputDir,
+                                             LaunchPaths paths,
+                                             List<LaunchKitVariant> variants,
+                                             boolean includesMappings) {
+        String availableProfiles = variants.stream()
+            .map(LaunchKitVariant::profile)
+            .collect(Collectors.joining(", "));
+        boolean hasFabricVariant = variants.stream().anyMatch(variant -> "fabric".equals(variant.profile()));
+        String fabricNote = variants.stream().anyMatch(variant -> "fabric".equals(variant.profile()))
+            ? "Use the `fabric` files for Fabric launcher profiles; use `generic` for Forge, NeoForge, vanilla servers, and mixed-runtime launch wrappers."
+            : "Only the generic runtime variant is available in this kit; add a sibling `InterMedCore-*-fabric.jar` next to the generator jar if you also want Fabric-specific launch files.";
+        String mappingsNote = includesMappings
+            ? "This kit staged a mappings file into `runtime/mappings.tiny`, so the generated launch args keep remapping parity outside the development tree."
+            : "No mappings file was staged into this kit; runtime remapping will use the default in-jar/runtime fallback path.";
+        String launcherFieldLine = hasFabricVariant
+            ? "   Open `launcher-jvm-args-generic.txt` (or the `fabric` variant when present)\n"
+              + "   and paste the single line into the launcher's JVM arguments / Java flags field."
+            : "   Open `launcher-jvm-args-generic.txt` and paste the single line into\n"
+              + "   the launcher's JVM arguments / Java flags field.";
+        String shellExamples = hasFabricVariant
+            ? "2. Linux/macOS direct launch:\n"
+              + "   `./intermed-launch-generic.sh -jar minecraft_server.jar nogui`\n"
+              + "   or `./intermed-launch-fabric.sh -jar fabric-server-launch.jar nogui`\n"
+            : "2. Linux/macOS direct launch:\n"
+              + "   `./intermed-launch-generic.sh -jar minecraft_server.jar nogui`\n";
+        String windowsExamples = hasFabricVariant
+            ? "3. Windows direct launch:\n"
+              + "   `intermed-launch-generic.cmd -jar minecraft_server.jar nogui`\n"
+              + "   or `intermed-launch-fabric.cmd -jar fabric-server-launch.jar nogui`\n"
+            : "3. Windows direct launch:\n"
+              + "   `intermed-launch-generic.cmd -jar minecraft_server.jar nogui`\n";
+        String fabricWrapperLine = hasFabricVariant
+            ? "\nUse the `fabric` wrapper variants for Fabric-specific launch profiles.\n"
+            : "\n";
+        String readme = """
+            InterMed Launch Kit
+            ===================
+
+            Game directory: %s
+            Mods directory: %s
+            Profiles in this kit: %s
+
+            %s
+
+            %s
+
+            Use this folder in one of three ways:
+
+            1. Any launcher with a JVM arguments field:
+            %s
+
+            %s
+            %s
+            %s
+            The wrappers forward every additional argument directly to Java.
+            Examples:
+
+              intermed-launch-generic.sh -jar minecraft_server.jar nogui
+              intermed-launch-generic.cmd -cp forge-bootstrap.jar cpw.mods.bootstraplauncher.BootstrapLauncher --launchTarget forgeclient
+
+            If your launcher UI tokenizes quoted JVM flags strangely, use the generated
+            shell / cmd wrapper instead of manually pasting flags.
+            """.formatted(paths.gameDir(), paths.modsDir(), availableProfiles, fabricNote, mappingsNote,
+            launcherFieldLine, shellExamples, windowsExamples, fabricWrapperLine);
+        writeUtf8(outputDir.resolve("README.txt"), readme);
+    }
+
+    private static void writeLaunchKitManifest(Path outputDir,
+                                               LaunchPaths paths,
+                                               List<LaunchKitVariant> variants,
+                                               Path stagedMappings) {
+        JsonObject root = new JsonObject();
+        root.addProperty("schema", "intermed-launch-kit-v1");
+        root.addProperty("generatedAtUtc", Instant.now().toString());
+        root.addProperty("gameDir", paths.gameDir().toString());
+        root.addProperty("modsDir", paths.modsDir().toString());
+        if (stagedMappings != null) {
+            root.addProperty("mappings", stagedMappings.toString());
+        }
+        JsonArray variantArray = new JsonArray();
+        for (LaunchKitVariant variant : variants) {
+            JsonObject item = new JsonObject();
+            item.addProperty("profile", variant.profile());
+            item.addProperty("agent", variant.agent().toString());
+            item.addProperty("bootstrap", variant.bootstrap().toString());
+            item.addProperty("argFile", variant.argFile().toString());
+            item.addProperty("launcherSnippet", variant.launcherSnippet().toString());
+            item.addProperty("shellScript", variant.shellScript().toString());
+            item.addProperty("cmdScript", variant.cmdScript().toString());
+            JsonArray args = new JsonArray();
+            variant.jvmArgs().forEach(args::add);
+            item.add("jvmArgs", args);
+            variantArray.add(item);
+        }
+        root.add("variants", variantArray);
+        writeUtf8(
+            outputDir.resolve("intermed-launch-kit.json"),
+            new GsonBuilder().setPrettyPrinting().create().toJson(root) + System.lineSeparator()
+        );
+    }
+
+    private static void writeUtf8(Path output, String content) {
+        try {
+            Files.createDirectories(output.toAbsolutePath().normalize().getParent());
+            Files.writeString(output, content, StandardCharsets.UTF_8);
+        } catch (Exception e) {
+            throw new IllegalStateException("Failed to write " + output, e);
+        }
+    }
+
+    private static void makeExecutableIfSupported(Path path) {
+        try {
+            Files.setPosixFilePermissions(path, Set.of(
+                PosixFilePermission.OWNER_READ,
+                PosixFilePermission.OWNER_WRITE,
+                PosixFilePermission.OWNER_EXECUTE,
+                PosixFilePermission.GROUP_READ,
+                PosixFilePermission.GROUP_EXECUTE,
+                PosixFilePermission.OTHERS_READ,
+                PosixFilePermission.OTHERS_EXECUTE
+            ));
+        } catch (UnsupportedOperationException ignored) {
+            // Windows / non-POSIX file systems do not expose POSIX permissions.
+        } catch (Exception e) {
+            throw new IllegalStateException("Failed to mark launch-kit script executable: " + path, e);
+        }
     }
 
     private static Path resolvePerformanceSnapshot(LaunchRequest request, Path projectRoot) {
@@ -649,6 +1018,15 @@ public class InterMedLauncher {
     }
 
     private record LaunchPaths(Path gameDir, Path modsDir, Path configDir) {}
+
+    private record LaunchKitVariant(String profile,
+                                    Path agent,
+                                    Path bootstrap,
+                                    Path argFile,
+                                    Path launcherSnippet,
+                                    Path shellScript,
+                                    Path cmdScript,
+                                    List<String> jvmArgs) {}
 
     static final class LaunchRequest {
         private final String command;
